tests/NormalTests/paczka2/big_fuzzy/87252061.err
Error in line 4: zxs6 S708 94,08
Error in line 1: zxs6 S554 10,1
Error in line 3: bS6QZk S542 53,6
Error in line 8: zxs6 S708 172,5
Error in line 14: bS6QZk S542 32,1
Error in line 11: zxs6 S542 91,1
Error in line 18: zxs6 A935 70,6
Error in line 17: bS6QZk A935 50,0
Error in line 32: 4qNsFgob S554 89,7
Error in line 37: 4qNsFgob S542 2,8
Error in line 33: S708 S542 52,2
Error in line 43: bS6QZk S554 -2,6
Error in line 45: zxs6 S554 32,5
Error in line 47: S708 S708 98,5
Error in line 34: bS6QZk S554 47,9
Error in line 46: zxs6 S542 84,8
Error in line 51: bS6QZk A935 44,9
Error in line 50: obvC1si7v A935 99,7
Error in line 62: obvC1si7v S708 9,0
Error in line 71: S708 S708 72,4
Error in line 75: 4qNsFgob S542 67,1
Error in line 82: 4qNsFgob S554 45,2
Error in line 80: S708 S554 34,2
Error in line 95: obvC1si7v S708 87,0
Error in line 100: obvC1si7v A935 87,6
Error in line 90: VCH S554 45,2
Error in line 107: zxs6 S542 69,4
Error in line 115: bS6QZk A935 45,3
Error in line 111: S708 S554 83,9
Error in line 120: S708 A935 82,8
Error in line 116: bS6QZk S554 5,9
Error in line 122: S708 S554 32,1
Error in line 149: zxs6S54217,6
Error in line 153: 4dtLO1T2ie9 A935 10,2
Error in line 158: VCH S708 141|7
Error in line 150: zxs6 S542 40,3
Error in line 160: zxs6 S554 51,1
Error in line 161: zxs6 A935 9,8
Error in line 152: VCH S708 80,5
Error in line 169: VCH S542 8,3
Error in line 167: VCH S542 61,8
Error in line 170: bS6QZk S554 72,3
Error in line 189: VCH S708 33,46
Error in line 198: zxs6 S554 8,7
Error in line 199: obvC1si7v S554 19,7
Error in line 205: obvC1si7v A935 91,2
Error in line 203: zxs6 A935 21,1
Error in line 184: VCH S708 31,4
Error in line 191: 4qNsFgob S708 225,5
Error in line 230: S708 S542 74,8
Error in line 235: 4dtLO1T2ie9 S708 15,10
Error in line 224: obvC1si7v S554 37,0
Error in line 229: bS6QZk S554 0,6
Error in line 244: bS6QZk S708 298,76
Error in line 239: 4dtLO1T2ie9 S708 45,3
